--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "antd": "^3.12.3",
     "axios": "^0.18.0",
     "browser-cookies": "^1.2.0",
@@ -135,11 +136,14 @@
           "legacy": true
         }
       ],
-      ["import", {
-        "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": true
-      }]
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "es",
+          "style": true
+        }
+      ]
     ]
   }
 }
